fixed iframe width of API '_embed' field to prevent overflow on smaller screens

--- a/src/assets/css/ContentComponent.scss
+++ b/src/assets/css/ContentComponent.scss
@@ -5,6 +5,14 @@
     background: rgba(255,255,255,.84);
     color: black;
     overflow: scroll;
+
+    .component-content-container--inner {
+        ._embed {
+            iframe {
+                width: 100%;
+            }
+        }
+    }
 }
 
 
